# snakemake-storage-plugin-rucio

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release-please.yml
ci/rucio/: expose_ports.patch  rucio.cfg
docs/: further.md  intro.md
snakemake_storage_plugin_rucio/: __init__.py  rucio_quote.py
tests/: test_plugin.py  test_rucio_quote.py  tests.py
